--- a/themes/base_files/scss/_tiki-variables.scss
+++ b/themes/base_files/scss/_tiki-variables.scss
@@ -7,7 +7,7 @@ $padding-x: .75rem;
 // Older
 $topmodules-row-sidemargins: 0;
 $topbar-row-sidemargins: 0;
-$topbar-row-margin-bottom: 1rem;
+$topbar-row-margin-bottom: 1.4rem;
 $panel-heading-padding: .8rem 15px;
 $navbar-fixed-height: 3.25rem;
 $form-horizontal-sidemargins: 15px;
