--- a/themes/feb12/scss/_bootstrap-variables.scss
+++ b/themes/feb12/scss/_bootstrap-variables.scss
@@ -89,3 +89,4 @@ $navbar-link-color: #f5f5f5;
 // Close
 // Code
 
+$topbar-row-margin-bottom: 0;
