--- a/themes/feb12/scss/_tiki-selectors.scss
+++ b/themes/feb12/scss/_tiki-selectors.scss
@@ -11,7 +11,7 @@ $imagePath: "../images/";
 
 //$topmodules-row-sidemargins: -15px;
 //$topbar-row-sidemargins: -15px;
-$topbar-row-margin-bottom: 0;
+
 
 .container {
 	border: 1px solid #006669;
